--- a/modules/distribution/INSTALL.txt
+++ b/modules/distribution/INSTALL.txt
@@ -47,13 +47,24 @@ Standalone Mode
 
 System Requirements
 =======================
+1. Minimum memory - 2GB
+2. Java 1.7 or higher
+3. The Management Console does not support MS IE.
+4. To compile and run the sample clients, an Ant version is required. Ant 1.7.0
+   version is recommended
+5. To build WSO2 CEP from the Source distribution, it is necessary that you have
+   JDK 1.7 version or later and Maven 3.0.4 or later
+
+
+System Requirements
+=======================
 1. JDK - 1.6.x (1.6.0_24 onwards recommended for production)
 2. Minimum memory - 2 GB
 3. Processor      - Intel Dual-Core 1GHz or equivalent at minimum
 4. The Management Console requires full Javascript enabling of the Web browser
 
 For more details see
-http://docs.wso2.org/display/CEP400/Installation+Prerequisites
+http://docs.wso2.com/display/CEP400/Installation+Prerequisites
 
 (2) Running Samples
 -------------------
@@ -63,4 +74,4 @@ CEP server can also start with the sample mode (Note : dashboard will not work i
     Example, to run sample 0001: ./wso2cep-samples.sh -sn 0001
 
 CEP samples are available at CARBON_HOME/samples directory.
-The instructions to run sample are given at http://docs.wso2.org/display/CEP400/Samples.
+The instructions to run sample are given at https://docs.wso2.com/display/CEP400/Samples+Guide .
